# Custom-NCCL-Collectives

./: .clangd  .gitignore  Dockerfile  Makefile  README.md  compile_commands.json  pyproject.toml
.github/workflows/: build_and_deploy.yml
nccl_api/: Makefile  common.h
nccl_api/collective_communication/: Makefile
nccl_api/collective_communication/algorithms/: Makefile
nccl_api/point_to_point_communication/: Makefile  recvSend.cu  sendRecv.cu
nccl_tests/: Makefile  README.md
original_nccl_components/: README.md
src/: Makefile  common.h  custom_nccl.h
src/collective_communication/: Makefile
src/collective_communication/algorithms/: Makefile  ring.cc  tree.cc
src/collective_communication/operations/: AllGather.cc  AllReduce.cc  AllReduce.cu  Broadcast.cc  Makefile  Reduce.cc  ReduceScatter.cc
src/grouped_calls/: AllToAll.cc  AllToOne_Gather.cc  Makefile  NeighborExchange.cc  OneToAll_Scatter.cc  RecvCopySend.cc  RecvReduceCopySend.cc  RecvReduceSend.cc  SendRecv_Peer_Exchange.cc
src/include/: common.h  custom_nccl.h
src/nccl_api/: common.h
src/nccl_core/: Makefile  README_DISCLAIMER.md  Recv.cc  Send.cc  communicator.cc  groups.cc
src/point_to_point_communication/: AllToAll.cc  AllToOne_Gather.cu  Makefile  NeighborExchange.cc  OneToAll_Scatter.cc  OneToAll_Scatter.cu  Recv.cc  RecvCopySend.cc  RecvReduceCopySend.cu  RecvReduceSend.cu  RecvSend.cc  RecvSend.cu  Send.cc
tests/: Makefile  README.md
tests/nccl_perf_tests/: Makefile
tests/unit_tests/: Makefile  RecvSend_test.cu  SendRecv_test.cu  common.h  recvSend_test.cu
(+5 files in other folders)
