[project]
name = "nccl_from_first_principles"
version = "0.1.0"
description = "NCCL communication APIs and transport layer created from first principles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""
